force-app/main/default/objects/refedge__RefSearch_Usage_Track__c/fields/refedge__Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Activity_Date__c</fullName>
    <description>Contains the date when the particular person uses ref search page.</description>
    <label>Activity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>