force-app/main/default/objects/refedge__RefSearch_Usage_Track__c/fields/refedge__Lead__c.field-meta.xml
<CustomField>
    <fullName>refedge__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Ref Search Usage Tracks</relationshipLabel>
    <relationshipName>Ref_Search_Usage_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>