force-app/main/default/objects/refedge__RefSearch_Usage_Track__c/fields/refedge__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ref Search Usage Tracks</relationshipLabel>
    <relationshipName>Ref_Search_Usage_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>