force-app/main/default/objects/refedge__RefSearch_Usage_Track__c/fields/refedge__User__c.field-meta.xml
<CustomField>
    <fullName>refedge__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It contains user id for the person who uses ref search page</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RefSearch_Usage_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>